Primeira versão da autenticação do documento.
